ErrorProne: Enforce & fix NonApiType
See https://errorprone.info/bugpattern/NonApiType

Bug: 344658662
Test: m BluetoothInstrumentationTests
Flag: Exempt Build and test only
Change-Id: Ibf6b02e1ca0e8446013e388c03c305e25eac4d8d